# 46-mpc

./: .gitignore  CMakeLists.txt  README.md  convergedBetaVector104PosesHardwareTrained.txt  gains.txt  params.cfg
balancing/: CMakeLists.txt  Q.txt  R.txt  gains.txt
balancing/exe/: 00-balance.cpp  01-balance-kore.cpp  01-balance.cpp  01-joystick.cpp  02-balance-kore-neat.cpp
balancing/src/: balancing.h  file_ops.cpp  helpers.cpp  helpers.h  test.cpp
cfg/: arms_params.cfg  balancing_params.cfg  balancing_params_simulation.cfg  mpc_params.cfg  whole_body_basic.cfg
doc/: verification_checklist
exe/: 01-balance-kore.cpp  01-balancing.cpp  02-joystick_testing.cpp  plot_script.py
include/balancing/: ESO.hpp  adrc.hpp  arms.h  balancing.h  balancing_config.h  control.h  ddp_objects.h  events.h  file_ops.hpp  grippers.h  joystick.h  keyboard.h  lqr.hpp  mpc.h  timer.h  torso.h  waist.h  whole_body_basic.h
include/ddp/: .ddp.hpp.swp  ddp.hpp  dynamics.hpp  result.hpp
sensors/: CMakeLists.txt
sensors/exe/: .sensors.cpp.swp  sensors.cpp
sensors/src/: helpers.cpp  helpers.h
src/: adrc.cpp  arms.cpp  arms.h  balancing.h  balancing_config.cpp  balancing_config.h  control.cpp  control.h  events.cpp  events.h  file_ops.cpp  grippers.cpp  grippers.h  helpers.cpp  helpers.h  joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  lqr.cpp  mpc.cpp  timer.cpp  torso.cpp  torso.h  utils.h  waist.cpp  waist.h  whole_body_basic.cpp
